<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.DATANMobileApps.FullscreenContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#171717"
        android:fitsSystemWindows="true"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="835dp"
                android:layout_height="1768dp"
                android:contentDescription="@string/background"
                android:rotation="90"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/_05fbea9733cec16a0e7c02c58b0f988" />

            <Button
                android:id="@+id/btnHW"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginStart="135dp"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="129dp"
                android:layout_marginEnd="136dp"
                android:layout_marginRight="136dp"
                android:layout_marginBottom="22dp"
                android:text="@string/hello_world"
                android:textColor="#1E1E1E"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/btnExer1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck,VisualLintOverlap,DuplicateClickableBoundsCheck" />

            <Button
                android:id="@+id/btnExer1"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginStart="135dp"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="136dp"
                android:layout_marginRight="136dp"
                android:layout_marginBottom="22dp"
                android:text="@string/exercise_1"
                android:textColor="#1B1C1D"
                app:backgroundTint="#C3C2C2"
                app:layout_constraintBottom_toTopOf="@+id/btnAct1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnHW"
                tools:ignore="VisualLintOverlap" />

            <Button
                android:id="@+id/btnAct1"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:text="@string/activity_1"
                android:textColor="#000000"
                app:backgroundTint="#88799E"
                app:layout_constraintBottom_toTopOf="@+id/btnAct2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnExer1"
                tools:ignore="VisualLintOverlap" />

            <Button
                android:id="@+id/btnAct2"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:text="@string/menu"
                android:textColor="#000000"
                app:backgroundTint="#88799E"
                app:layout_constraintBottom_toTopOf="@+id/btnAct3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAct1"
                tools:ignore="VisualLintOverlap" />

            <Button
                android:id="@+id/btnAct3"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="129dp"
                android:text="@string/sms"
                app:backgroundTint="#371567"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAct2"
                tools:ignore="VisualLintOverlap" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.DATANMobileApps.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

    </FrameLayout>

</FrameLayout>